# cool

./: README.md  index.html  io.md  params.json  style.css
notes/: permissions.md
src/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  conditions.c  cool.c  cool.h  cool_environment.c  cool_environment.h  cool_types.h  cool_value.c  cool_value.h  cooli.c  evaluator.c  functions.c  hello.cl  keystore  mpc.c  prompt.c  q_expressions.c  s_expressions.c  smallfile  strings.c  variables.c
src/examples/: hello.cl
src/internal/: actor.c  actor.h  actor_message.c  actor_message.h  atomic.c  atomic.h  buffer.c  buffer.h  channel.c  channel.h  list.c  list.h  signal.c  signal.h
src/internal/ccn/: ccn_common.c  ccn_common.h  ccn_fetcher.c  ccn_fetcher.h  ccn_producer.c  ccn_producer.h
src/internal/encoding/: json.c  json.h
src/internal/test/: test_actor.c  test_list.c  test_signal.c
src/legacy/: parser.c  r.c
src/lib/: cool.stdlib
src/old/: evaluator.c  prompt.c  s_expressions.c  strings.c
src/test/: .gitignore  Makefile  check.sh  coverage.sh  test_cool.c  test_cool_environment.c  test_cool_value.c
